# Encryption-Library

./: .gitignore  CMakeLists.txt  README.md
src/aes/: AESEncryption.cpp  AESEncryption.h
src/rand/: Rand.cpp  Rand.h
